Fixed wrong content for GoodReads and spacing

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -39,7 +39,7 @@ $icon-skype: 'f17e';
 $icon-github: 'f09b';
 $icon-stackoverflow: 'f16c';
 $icon-codepen: 'f32c';
-$icon-goodreads: 'f16c';
+$icon-goodreads: 'e800';
 $icon-linkedin: 'f0e1';
 $icon-twitter: 'f099';
 $icon-spotify: 'f1bc';
